resized things in multiple pages

--- a/server/public/stylesheets/questions_search.css
+++ b/server/public/stylesheets/questions_search.css
@@ -131,13 +131,18 @@ a:focus {
     letter-spacing: 1px;
 }
 
-#content .cardContainer h4{
+.cardContainer h4{
+    height: 80px;
     margin-bottom: 0px;
     font-weight: 400;
     font-size: 18px;
     color: #eeeeeecc;
     text-shadow: 0px 1px 2px rgb(111, 111, 111);
     letter-spacing: 1px;
+}
+
+.questionContainer{
+    height: 120px;
 }
 
 #hr_light{
