--- a/server/views/settings.jade
+++ b/server/views/settings.jade
@@ -5,7 +5,7 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     title Maple Donut - Settings
-    
+
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -29,7 +29,7 @@ html
     script(type='text/javascript' src='/javascripts/sidebar.js')
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
-  
+
   body
     .wrapper
       // Sidebar
@@ -43,7 +43,7 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center  
+          h3.text-center
         hr
         ul.list-unstyled.components
           li
@@ -104,13 +104,15 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          h2 Account Settings
-          p Username: MacEwanUsername.
-          p Email: youremail@mapledonut.ca.
-          p Password: See MacEwan Account to change password.
-          p Profile Picture: Maple Donut.
-          p Discipline: Bachelor of Science.
-          p Bio: Insert Bio here.
-          a.btn.btn-primary(href='settings_edit') Edit
-          .line
+          if locals.data != Null
+            for stu_info in locals.data
+              h2 Account Settings
+              p Username: #{stu_info.name}
+              p Email: #{stu_info.email}
+              p Password: See MacEwan Account to change password.
+              p Profile Picture: Maple Donut.
+              p Discipline: #{stu_info.discipline_name}
+              p Bio: #{stu_info.biography}
+              a.btn.btn-primary(href='settings_edit') Edit
+              .line
     .overlay
