--- a/server/views/prof_questions-answer.jade
+++ b/server/views/prof_questions-answer.jade
@@ -20,7 +20,7 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
-    // 7,8 - Google Auth 
+    // 7,8 - Google Auth
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
@@ -66,7 +66,7 @@ html
             ul#scheduleSubmenu.collapse.list-unstyled
               li
                 a(href='/prof_schedule') View Schedule(s)
-              li 
+              li
                 a(href='/prof_schedule/add_schedule') Add Schedule(s)
         hr
         ul.list-unstyled.components
@@ -91,6 +91,16 @@ html
         #content
           h1.text-center Questions: #{courseID}
           hr
+          form(action='/prof_questions/'+courseID method='post')
+              .d-flex.justify-content-margin-right
+                .select(id="sort_combobox")
+                  select(name="sort_combobox" id="sortComboBox")
+                    option(selected='selected' value='') Sort by
+                    option(type='text' value='upvote') Most likes
+              br
+              button.btn.btn-success(type='submit' id='submit_button') Apply
+                i.fab.fa-telegram-plane
+          br
           if locals.questions != null
             .list-group
             for questions in locals.questions
@@ -104,7 +114,7 @@ html
                       p(id='question_card_desc').mb-1 #{questions.question_desc}
                     hr(id='no_margin_line_break')
                     small Tags: #{questions.label}
-                else 
+                else
                   a.list-group-item.list-group-item-action.flex-column.align-items-start(href='/prof_questions/'+courseID+'/'+questions.question_id id='link_card')
                     .d-flex.w-100.justify-content-between
                       h5.mb-1 #{questions.question_title}
