--- a/server/views/prof_schedule.jade
+++ b/server/views/prof_schedule.jade
@@ -116,7 +116,8 @@ html
                     hr#invisible_line_break
                     a.btn.btn-success.btn-block.btn-lg(href='/prof_schedule/'+schedule.course_id+'/edit_schedule') Edit Schedule
                     hr#invisible_line_break
-                    a.btn.btn-danger.btn-block.btn-lg(href='#') Delete Schedule
+                    form(action='/prof_schedule/delete_schedule' method='post')
+                      button.btn.btn-danger.btn-block.btn-lg(type='submit' name='delete_schedule_button' value=schedule.schedule_id) Delete Schedule
             else
               br
               h4.text-center You currently don't have any schedules :(
