--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -81,9 +81,7 @@ html
               | Discussions
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='/discussions') Discussion Board
-                li
-                  a(href='/token') Group Chats
+                  a(href='/token/chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -143,7 +141,7 @@ html
                 hr(id='invisible_line_break')
                 | SEARCH PROFESSORS
             .card(id='buttonCard')
-              a.btn.btn-secondary(href='/token') 
+              a.btn.btn-secondary(href='/token/chat') 
                 br
                 i.far.fa-comments.fa-5x
                 hr(id='invisible_line_break')
