--- a/server/views/prof_courses.jade
+++ b/server/views/prof_courses.jade
@@ -68,7 +68,7 @@ html
               li
                 a(href='/prof_schedule') View Schedule(s)
               li 
-                a(href='/prof_schedule/add_schedule') Add Schedule(s)
+                a(href='/token/schedule') Add Schedule(s)
         hr
         ul.list-unstyled.components
           li
@@ -113,7 +113,7 @@ html
                             i.far.fa-calendar-alt.fa-fw
                       else
                         button.btn.btn-primary.btn-block.btn-lg
-                          a(href='/prof_schedule/add_schedule') Add Schedule
+                          a(href='/token/schedule') Add Schedule
                             i.far.fa-calendar-alt.fa-fw
                       hr#invisible_line_break
                       // Checks if there are any questions that need to be answered 
