--- a/server/views/prof_home.jade
+++ b/server/views/prof_home.jade
@@ -67,7 +67,7 @@ html
               li
                 a(href='/prof_schedule') View Schedule(s)
               li 
-                a(href='/prof_schedule/add_schedule') Add Schedule(s)
+                a(href='/token/schedule') Add Schedule(s)
         hr
         ul.list-unstyled.components
           li
@@ -113,7 +113,7 @@ html
                 hr(id='invisible_line_break')
                 | VIEW SCHEDULE(S)
             .card(id='buttonCard')
-              a.btn.btn-warning(href='/prof_schedule/add_schedule') 
+              a.btn.btn-warning(href='/token/schedule') 
                 br
                 i.far.fa-calendar-plus.fa-6x
                 hr(id='invisible_line_break')
