--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -48,6 +48,15 @@ html
         addMessageGroup("CMPT 201","Practical Programming Methodology","5");
         addMessageGroup("CMPT 204","Algorithms I","6");
         addMessageGroup("CMPT 220","Unix, Scripting, and Other Tools","7");
+        addMessageGroup("CMPT 398","independent study","10");
+        addMessageGroup("CMPT 496","Capstone Project","8");
+        addMessageGroup("CMPT 498","Advanced independent study","9");
+        addMessageGroup("ECON 101","Microeconomics","11");
+        addMessageGroup("ECON 102","Macroeconomics","12");
+        addMessageGroup("ECON 360","Money and banking","13");
+        addMessageGroup("ECON 391","Economics of the enviroment","14");
+        addMessageGroup("Anouncments","Keep up to date with whats happening","15");
+        
 
       }
     .wrapper
