--- a/server/public/stylesheets/prof_questions-answer.css
+++ b/server/public/stylesheets/prof_questions-answer.css
@@ -145,4 +145,25 @@ a:focus {
     margin: 0px;
 }
 
+/* COMBO BOX PROPERTY @OVERRIDE */
+.select {
+    position: relative;
+    display: flex;
+    margin: 5px;
+    width: 180px;
+    height: 42px;
+    background: #252525;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+select {
+    flex: 1;
+    padding: 5px;
+    text-align-last: auto;
+    font-size: 18px;
+    color: #bbbbbb;
+    cursor: pointer;
+}
+
 
