--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -51,15 +51,10 @@ html
             a(href='/home')
               i.fas.fa-home
               | Home
-          li.active
-            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/courses')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='/courses') Current Courses
-                li
-                  a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
@@ -75,13 +70,10 @@ html
             a(href='/professors')
               i.fas.fa-chalkboard-teacher
               | Professors
-          li.active
-            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/token/chat')
               i.fas.fa-comments
-              | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='/token/chat') Group Chats
+              | Group Chats
         hr
         ul.list-unstyled.components
           li
