--- a/server/views/questions_answered.jade
+++ b/server/views/questions_answered.jade
@@ -43,22 +43,17 @@ html
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
           h2#profilename.text-center Seth Thompson
-          h3.text-center
+          h3.text-center  
         hr
         ul.list-unstyled.components
           li
             a(href='/home')
               i.fas.fa-home
               | Home
-          li.active
-            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/courses')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='/courses') Current Courses
-                li
-                  a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
@@ -74,15 +69,10 @@ html
             a(href='/professors')
               i.fas.fa-chalkboard-teacher
               | Professors
-          li.active
-            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='/token/chat')
               i.fas.fa-comments
-              | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='/discussions') Discussion Board
-                li
-                  a(href='/chat') Group Chats
+              | Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -117,7 +107,5 @@ html
                     .description_container(id='description_container')
                       p.mb-1 #{answer.answer_string}
                     hr(id='no_margin_line_break')
-                    small Date Answered: #{answer.answer_date}
-                    hr(id='no_margin_line_break')
-                    small Likes #{answer.upvote}
+                    small Date Answered: #{answer.answer_date} | Likes #{answer.upvote}
     .overlay
